# s5rd-haskell

./: CHANGELOG.md  LICENSE  README.md  s5rd.cabal
.github/workflows/: haskell.yaml
app/: Main.hs
src/Data/: S5rd.hs
src/Data/S5rd/: Decode.hs  Encode.hs  From.hs  Internal.hs  Parse.hs  Serialize.hs  To.hs  Type.hs  Util.hs
src/Data/S5rd/Parse/: Binary.hs  Text.hs  Type.hs
src/Data/S5rd/Pretty/: Text.hs
src/Data/S5rd/Serialize/: Binary.hs  Text.hs
test/: External.hs  From.hs  Internal.hs  Prop.hs  To.hs  Util.hs
test/Parse/: Binary.hs  Text.hs
